fixed adbox images to be centered on small screens

--- a/slant/collected_static/dataviz/storybox.css
+++ b/slant/collected_static/dataviz/storybox.css
@@ -164,7 +164,7 @@ hr.storybreak {
 
 .adbox-content {
   background: #fff;
-  width: 300px;
+  max-width: 300px;
   margin-left: auto;
   margin-right: auto;
   -webkit-box-shadow: 0 0 15px 15px #fff;
